@@ -13,45 +13,25 @@ pkgunpack \- Extract and patch source code from archives.
 .B pkgunpack
 extracts the source code needed to build packages.  For each package, it
 extracts files from the package's source archives and applies required patches.
-Files are searched for in the source and build directories specified in
-.IR "%CONFIG%",
-and source code is unarchived in the build directory.
+Archives and patches are searched for in (subdirectories of) the source
+directory, and source code is unarchived in the build directory.
 
+Packages are specified by short name (without a version number), e.g. `bash',
+`gcc'.  Profiles have the same name suffixed by
+.I .pkg
+(`bash.pkg', `gcc.pkg'), and are searched for first in the current working
+directory, then in the profile directory.
+
+After running
+.BR "pkgunpack",
 .BR pkgbuild (1)
-may then be invoked to build the source code.
-
-.SH PACKAGE LIST
-
-Package profiles may be specified in two ways.  Any combination of the following
-options may be used.
-
-.BR -f ", " --profile
-.I profile
-.BR ...
-.RS
-Specify files containing package profiles.
-.RE
-
-.BR -p ", " --package
-.I package
-.BR ...
-.RS
-Specify packages by name.  Profiles will be searched for the profile directory
-specified in
-.IR "%CONFIG%".
-This is the default behaviour if neither option is used.
-.RE
-
-.BR --
-.RS
-Treat remaining arguments as packages or profiles, even if they begin with `-'.
-This effectively locks the package list into its current mode.
-.RE
+may be invoked to build the source code.
 
 .SH OPTIONS
 
 All options must precede
 .IR "package_list".
+When options conflict or are repeated, the last on the commandline is used.
 
 .BR -c ", " --config
 .I config_file
@@ -76,6 +56,11 @@ to bootstrap an LFS system; stage 2 is building the final system.
 .BR -v ", " --version
 .RS
 Display version information.
+.RE
+
+.B --
+.RS
+Treat all remaining arguments as packages.
 .RE
 
 .SH FILES
